--- a/docker/docker-compose-ca.yaml
+++ b/docker/docker-compose-ca.yaml
@@ -6,13 +6,13 @@ networks:
 
 services:
 
-  ca_manufacturer:
+  ca_farmer:
     image: hyperledger/fabric-ca:latest
     labels:
       service: hyperledger-fabric
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca-manufacturer
+      - FABRIC_CA_SERVER_CA_NAME=ca-farmer
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=7054
       - FABRIC_CA_SERVER_OPERATIONS_LISTENADDRESS=0.0.0.0:17054
@@ -21,18 +21,18 @@ services:
       - "17054:17054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ../organizations/fabric-ca/manufacturer:/etc/hyperledger/fabric-ca-server
-    container_name: ca_manufacturer
+      - ../organizations/fabric-ca/farmer:/etc/hyperledger/fabric-ca-server
+    container_name: ca_farmer
     networks:
       - carbon-chain
 
-  ca_wholesaler:
+  ca_buyer:
     image: hyperledger/fabric-ca:latest
     labels:
       service: hyperledger-fabric
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca-wholesaler
+      - FABRIC_CA_SERVER_CA_NAME=ca-buyer
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=8054
       - FABRIC_CA_SERVER_OPERATIONS_LISTENADDRESS=0.0.0.0:18054
@@ -41,18 +41,18 @@ services:
       - "18054:18054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ../organizations/fabric-ca/wholesaler:/etc/hyperledger/fabric-ca-server
-    container_name: ca_wholesaler
+      - ../organizations/fabric-ca/buyer:/etc/hyperledger/fabric-ca-server
+    container_name: ca_buyer
     networks:
       - carbon-chain
 
-  ca_carbon:
+  ca_CertifyingAuth:
     image: hyperledger/fabric-ca:latest
     labels:
       service: hyperledger-fabric
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca-carbon
+      - FABRIC_CA_SERVER_CA_NAME=ca-certifyingAuth
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=11054
       - FABRIC_CA_SERVER_OPERATIONS_LISTENADDRESS=0.0.0.0:11055
@@ -61,8 +61,8 @@ services:
       - "11055:11055"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ../organizations/fabric-ca/carbon:/etc/hyperledger/fabric-ca-server
-    container_name: ca_carbon
+      - ../organizations/fabric-ca/certifyingAuth:/etc/hyperledger/fabric-ca-server
+    container_name: ca_CertifyingAuth
     networks:
       - carbon-chain
 
