--- a/docker/docker-compose-org4.yaml
+++ b/docker/docker-compose-org4.yaml
@@ -2,11 +2,11 @@ version: '3.7'
 
 volumes:
   orderer.carbon.com:
-  peer0.manufacturer.carbon.com:
-  peer0.wholesaler.carbon.com:
-  peer0.carbon.carbon.com:
+  peer0.farmer.carbon.com:
+  peer0.buyer.carbon.com:
+  peer0.certifyingAuth.carbon.com:
   peer0.regulators.carbon.com:
-  peer1.manufacturer.carbon.com:
+  peer1.farmer.carbon.com:
   couchdb0:
   couchdb1:
   couchdb2:
@@ -15,7 +15,7 @@ volumes:
 
 networks:
   carbon-chain:
-    name: fabric_pharma-chain
+    name: fabric_carbon-chain
 
 services:
 
@@ -116,28 +116,28 @@ services:
     networks:
       - carbon-chain
 
-  peer0.manufacturer.carbon.com:
-    container_name: peer0.manufacturer.carbon.com
+  peer0.farmer.carbon.com:
+    container_name: peer0.farmer.carbon.com
     image: hyperledger/fabric-peer:2.5.4
     environment:
       - FABRIC_LOGGING_SPEC=INFO
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_pharma-chain
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_carbon-chain
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_PROFILE_ENABLED=false
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
-      - CORE_PEER_ID=peer0.manufacturer.carbon.com
-      - CORE_PEER_ADDRESS=peer0.manufacturer.carbon.com:7051
+      - CORE_PEER_ID=peer0.farmer.carbon.com
+      - CORE_PEER_ADDRESS=peer0.farmer.carbon.com:7051
       - CORE_PEER_LISTENADDRESS=0.0.0.0:7051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.manufacturer.carbon.com:7052
+      - CORE_PEER_CHAINCODEADDRESS=peer0.farmer.carbon.com:7052
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.manufacturer.carbon.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.manufacturer.carbon.com:7051
-      - CORE_PEER_LOCALMSPID=ManufacturerMSP
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.farmer.carbon.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.farmer.carbon.com:7051
+      - CORE_PEER_LOCALMSPID=FarmerMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.manufacturer.carbon.com:9444
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.farmer.carbon.com:9444
       - CORE_METRICS_PROVIDER=prometheus
       - CORE_CHAINCODE_EXECUTETIMEOUT=300s
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
@@ -146,8 +146,8 @@ services:
       - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
     volumes:
       - /var/run/docker.sock:/host/var/run/docker.sock
-      - ../organizations/peerOrganizations/manufacturer.carbon.com/peers/peer0.manufacturer.carbon.com:/etc/hyperledger/fabric
-      - peer0.manufacturer.carbon.com:/var/hyperledger/production
+      - ../organizations/peerOrganizations/farmer.carbon.com/peers/peer0.farmer.carbon.com:/etc/hyperledger/fabric
+      - peer0.farmer.carbon.com:/var/hyperledger/production
     command: peer node start
     ports:
       - 7051:7051
@@ -157,30 +157,30 @@ services:
     networks:
       - carbon-chain
 
-  peer1.manufacturer.carbon.com:
-    container_name: peer1.manufacturer.carbon.com
+  peer1.farmer.carbon.com:
+    container_name: peer1.farmer.carbon.com
     image: hyperledger/fabric-peer:2.5.4
     labels:
       service: hyperledger-fabric
     environment:
       - FABRIC_LOGGING_SPEC=INFO
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_pharma-chain
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_carbon-chain
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_PROFILE_ENABLED=false
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
-      - CORE_PEER_ID=peer1.manufacturer.carbon.com
-      - CORE_PEER_ADDRESS=peer1.manufacturer.carbon.com:8051
+      - CORE_PEER_ID=peer1.farmer.carbon.com
+      - CORE_PEER_ADDRESS=peer1.farmer.carbon.com:8051
       - CORE_PEER_LISTENADDRESS=0.0.0.0:8051
-      - CORE_PEER_CHAINCODEADDRESS=peer1.manufacturer.carbon.com:8052
+      - CORE_PEER_CHAINCODEADDRESS=peer1.farmer.carbon.com:8052
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:8052
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.manufacturer.carbon.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.manufacturer.carbon.com:8051
-      - CORE_PEER_LOCALMSPID=ManufacturerMSP
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.farmer.carbon.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.farmer.carbon.com:8051
+      - CORE_PEER_LOCALMSPID=FarmerMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
-      - CORE_OPERATIONS_LISTENADDRESS=peer1.manufacturer.carbon.com:9445
+      - CORE_OPERATIONS_LISTENADDRESS=peer1.farmer.carbon.com:9445
       - CORE_METRICS_PROVIDER=prometheus
       - CORE_CHAINCODE_EXECUTETIMEOUT=300s
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
@@ -189,8 +189,8 @@ services:
       - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
     volumes:
       - /var/run/docker.sock:/host/var/run/docker.sock
-      - ../organizations/peerOrganizations/manufacturer.carbon.com/peers/peer1.manufacturer.carbon.com:/etc/hyperledger/fabric
-      - peer1.manufacturer.carbon.com:/var/hyperledger/production
+      - ../organizations/peerOrganizations/farmer.carbon.com/peers/peer1.farmer.carbon.com:/etc/hyperledger/fabric
+      - peer1.farmer.carbon.com:/var/hyperledger/production
     command: peer node start
     ports:
       - 8051:8051
@@ -200,31 +200,31 @@ services:
     networks:
       - carbon-chain
 
-  # Add similar peer definitions for wholesaler, carbon, and regulators, ensuring they point to their respective CouchDB instances (couchdb1, couchdb2, couchdb3, couchdb4).
+  # Add similar peer definitions for buyer, carbon, and regulators, ensuring they point to their respective CouchDB instances (couchdb1, couchdb2, couchdb3, couchdb4).
 
-  # Example for wholesaler
-  peer0.wholesaler.carbon.com:
-    container_name: peer0.wholesaler.carbon.com
+  # Example for buyer
+  peer0.buyer.carbon.com:
+    container_name: peer0.buyer.carbon.com
     image: hyperledger/fabric-peer:2.5.4
     environment:
       - FABRIC_LOGGING_SPEC=INFO
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_pharma-chain
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_carbon-chain
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_PROFILE_ENABLED=false
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
-      - CORE_PEER_ID=peer0.wholesaler.carbon.com
-      - CORE_PEER_ADDRESS=peer0.wholesaler.carbon.com:9051
+      - CORE_PEER_ID=peer0.buyer.carbon.com
+      - CORE_PEER_ADDRESS=peer0.buyer.carbon.com:9051
       - CORE_PEER_LISTENADDRESS=0.0.0.0:9051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.wholesaler.carbon.com:9052
+      - CORE_PEER_CHAINCODEADDRESS=peer0.buyer.carbon.com:9052
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:9052
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.wholesaler.carbon.com:9051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.wholesaler.carbon.com:9051
-      - CORE_PEER_LOCALMSPID=WholesalerMSP
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.buyer.carbon.com:9051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.buyer.carbon.com:9051
+      - CORE_PEER_LOCALMSPID=BuyerMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.wholesaler.carbon.com:9446
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.buyer.carbon.com:9446
       - CORE_METRICS_PROVIDER=prometheus
       - CORE_CHAINCODE_EXECUTETIMEOUT=300s
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
@@ -233,8 +233,8 @@ services:
       - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
     volumes:
       - /var/run/docker.sock:/host/var/run/docker.sock
-      - ../organizations/peerOrganizations/wholesaler.carbon.com/peers/peer0.wholesaler.carbon.com:/etc/hyperledger/fabric
-      - peer0.wholesaler.carbon.com:/var/hyperledger/production
+      - ../organizations/peerOrganizations/buyer.carbon.com/peers/peer0.buyer.carbon.com:/etc/hyperledger/fabric
+      - peer0.buyer.carbon.com:/var/hyperledger/production
     command: peer node start
     ports:
       - 9051:9051
@@ -248,28 +248,28 @@ services:
 
 
 
-  peer0.carbon.carbon.com:
-    container_name: peer0.carbon.carbon.com
+  peer0.certifyingAuth.carbon.com:
+    container_name: peer0.certifyingAuth.carbon.com
     image: hyperledger/fabric-peer:2.5.4
     environment:
       - FABRIC_LOGGING_SPEC=INFO
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_pharma-chain
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_carbon-chain
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_PROFILE_ENABLED=false
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
-      - CORE_PEER_ID=peer0.carbon.carbon.com
-      - CORE_PEER_ADDRESS=peer0.carbon.carbon.com:10051
+      - CORE_PEER_ID=peer0.certifyingAuth.carbon.com
+      - CORE_PEER_ADDRESS=peer0.certifyingAuth.carbon.com:10051
       - CORE_PEER_LISTENADDRESS=0.0.0.0:10051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.carbon.carbon.com:10052
+      - CORE_PEER_CHAINCODEADDRESS=peer0.certifyingAuth.carbon.com:10052
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:10052
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.carbon.carbon.com:10051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.carbon.carbon.com:10051
-      - CORE_PEER_LOCALMSPID=carbonMSP
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.certifyingAuth.carbon.com:10051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.certifyingAuth.carbon.com:10051
+      - CORE_PEER_LOCALMSPID=certifyingAuthMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.carbon.carbon.com:9447
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.certifyingAuth.carbon.com:9447
       - CORE_METRICS_PROVIDER=prometheus
       - CORE_CHAINCODE_EXECUTETIMEOUT=300s
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
@@ -278,8 +278,8 @@ services:
       - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
     volumes:
       - /var/run/docker.sock:/host/var/run/docker.sock
-      - ../organizations/peerOrganizations/carbon.carbon.com/peers/peer0.carbon.carbon.com:/etc/hyperledger/fabric
-      - peer0.carbon.carbon.com:/var/hyperledger/production
+      - ../organizations/peerOrganizations/certifyingAuth.carbon.com/peers/peer0.certifyingAuth.carbon.com:/etc/hyperledger/fabric
+      - peer0.certifyingAuth.carbon.com:/var/hyperledger/production
     command: peer node start
     ports:
       - 10051:10051
@@ -295,7 +295,7 @@ services:
     environment:
       - FABRIC_LOGGING_SPEC=INFO
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_pharma-chain
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fabric_carbon-chain
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_PROFILE_ENABLED=false
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
@@ -341,7 +341,7 @@ services:
     stdin_open: true
     environment:
       - GOPATH=/opt/gopath
-      - FABRIC_LOGGING_SPEC=INFO
+      - FABRIC_LOGGING_SPEC=INFO  
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       #- FABRIC_LOGGING_SPEC=DEBUG
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
@@ -350,10 +350,10 @@ services:
       - /var/run/docker.sock:/host/var/run/docker.sock
       - ../organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations
     depends_on:
-      - peer0.manufacturer.carbon.com
-      - peer0.wholesaler.carbon.com
-      - peer0.carbon.carbon.com
+      - peer0.farmer.carbon.com
+      - peer0.buyer.carbon.com
+      - peer0.certifyingAuth.carbon.com
       - peer0.regulators.carbon.com
-      - peer1.manufacturer.carbon.com
+      - peer1.farmer.carbon.com
     networks:
       - carbon-chain
